// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphSearch should match snapshot when isQueried false 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  entrySearchResults={
    Array [
      Object {
        "id": "123",
      },
    ]
  }
  entrySearchValue="value"
  isQueried={false}
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`GraphSearch should match snapshot when isQueried true 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  entrySearchResults={
    Array [
      Object {
        "id": "123",
      },
    ]
  }
  entrySearchValue="value"
  isQueried={true}
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
